<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/drawable_gradient3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:background="@drawable/drawable_gradient3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDialogHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/carme"
            android:text="@string/meal_dialog_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvDialogDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/carme"
            android:text="@string/meal_dialog_description"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/rbMediumPortion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_medium" />

            <RadioButton
                android:id="@+id/rbLargePortion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_large" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDialogRecommendation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/carme"
                    android:text="@string/recommendation"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDialogRecommendationTitle"
                    android:layout_width="163dp"
                    android:layout_height="90dp"
                    android:fontFamily="@font/carme"
                    android:text="Recommendation"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivRecommendation"
                android:layout_width="100dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>